syntax = "proto3";

import "libp2p/go-libp2p-core/crypto/pb";
package sonr.wallet;

enum KeyType {
	RSA = 0;
	Ed25519 = 1;
	Secp256k1 = 2;
	ECDSA = 3;
}

message PublicKey {
	required KeyType Type = 1;
	required bytes Data = 2;
}

message PrivateKey {
	required KeyType Type = 1;
	required bytes Data = 2;
}

message Wallet {
    string sName = 1;
    PublicKey pubKey = 3;
    PrivateKey privKey = 4;
    optional string mnemonic = 5;
    optional string seed = 6;
    string path = 7;
}
